<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="vote">投票</string>
    <string name="sign_up_for">报名参选</string>
    <string name="going_to_vote">立即投票</string>
    <string name="supernode_election">超级节点选举</string>
    <string name="enter_the_node_declaration">请输入节点宣言</string>
    <string name="please_select_country">请选择国家</string>
    <string name="please_enter_the_url">请输入节点官网URL</string>
    <string name="confirm_to_run">确认参选</string>
    <string name="my_vote">我的投票</string>
    <string name="voting_rules">投票规则</string>
    <string name="vote_qwtpzb">全网投票占比</string>
    <string name="the_current_number">当前票数</string>
    <string name="number_of_voting_addresses">节点数量</string>
    <string name="node_name">节点名称</string>
    <string name="node_addeer">节点地址</string>
    <string name="node_publickey">节点公钥</string>
    <string name="vote_of">投票占比</string>
    <string name="country_region">国家/地区</string>
    <string name="candidate_list">加入候选列表</string>
    <string name="view_candidate_list">查看候选列表</string>
    <string name="the_declaration_of_the_node">节点宣言</string>
    <string name="node_information">节点信息</string>
    <string name="mmediately_to_vote">立即投票</string>
    <string name="create_a_wallet">创建钱包</string>
    <string name="create_a_wallet_title">创建钱包（推荐）</string>
    <string name="import_the_wallet">导入钱包</string>
    <string name="please_enter_the_name_your_wallet">请输入钱包名称</string>
    <string name="please_enter_wallet_password">请输入钱包密码</string>
    <string name="please_enter_your_password_again_confirm">请再次输入确认密码</string>
    <string name="single_address_wallet">单地址钱包</string>
    <string name="backup_the_purse">备份钱包</string>
    <string name="next">下一步</string>
    <string name="copy_down_your_wallet_mnemonic">抄写下您的钱包助记词</string>
    <string name="text_mnemonic_prompt">请在纸上抄下您的助记词，\n助记词丢失您将永远失去自己的钱包</string>
    <string name="mnemonic_password">助记词密码（可选)</string>
    <string name="please_set_bit_mnemonic_password">请设置8至16位助记词密码</string>
    <string name="please_repeat_the_mnemonic_password_you_entered">请重复已输入的助记词密码</string>
    <string name="verify_mnemonic_words">验证助记词</string>
    <string name="mnemonic">助记词</string>
    <string name="please_enter_your_mnemonic_password_current_wallet">请输入当前钱包的助记词密码</string>
    <string name="please_space_out_mnemonic_words">助记词之间请使用空格隔开</string>
    <string name="please_enter_the_keystore_text_content">请输入Keystore文本内容</string>
    <string name="keystore">Keystore</string>
    <string name="wallet_management">钱包管理</string>
    <string name="add_the_currency">添加币种</string>
    <string name="transfer">转账</string>
    <string name="side_chain_top_up">侧链充值</string>
    <string name="main_chain_withdraw">主链提现</string>
    <string name="collection">收款</string>
    <string name="transaction_records">交易记录</string>
    <string name="create_a_wallet_text1">密码用于保护私钥和交易授权，强度非常重要</string>
    <string name="create_a_wallet_text2">elastos不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="inputWalletName">请输入钱包名称</string>
    <string name="inputWalletPwd">请输入钱包密码</string>
    <string name="inputWalltPwdAgin">请再次输入确认密码</string>
    <string name="lcmmsrbyz">两次密码输入不一致</string>
    <string name="mmgsbd">密码格式不符合要求，请重新设置</string>
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="back_up_your_wallet_immediately">立即备份你的钱包</string>
    <string name="Backup_wallet_export_mnemonic">备份钱包:请将「助记词」抄写到安全的地方,干万不要保存在网络上。建议从转入,转出小额资产开始使用</string>
    <string name="aToz">abcdefghijklmnopqrstuvwxyz</string>
    <string name="zeroTonine">1234567890</string>
    <string name="wrongMnemonic">助记词有误，请检查</string>
    <string name="please_enter_your_mnemonic_password">请输入助记词密码</string>
    <string name="language">语言</string>
    <string name="contact">联系人</string>
    <string name="nocontact">暂无联系人</string>
    <string name="setting">设置</string>
    <string name="pleaseinputname">请输入姓名(必填)</string>
    <string name="pleaseinputwalletaddr">请输入钱包地址(必填)</string>
    <string name="pleaseinputwalletpwd">请输入钱包密码</string>
    <string name="pleaseinputmobile">请输入手机号码</string>
    <string name="pleaseinputemail">请输入邮箱</string>
    <string name="pleaseinputremark">请输入备注</string>
    <string name="add">添加</string>
    <string name="surechange">确认修改</string>
    <string name="sureoutport">确认导出</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="addcontact">添加联系人</string>
    <string name="showcontact">联系人信息</string>
    <string name="editcontact">编辑联系人</string>
    <string name="namenoempty">姓名不能为空</string>
    <string name="wallletaddrnoempty">地址不能为空</string>
    <string name="deletornot">是否删除当前联系人？</string>
    <string name="copysucess">已复制到剪切板</string>
    <string name="copyfail">地址为空复制失败!</string>
    <string name="asset">资产</string>
    <string name="find">发现</string>
    <string name="addassset">添加币种</string>
    <string name="walletlist">钱包列表</string>
    <string name="modifywallletname">修改钱包名称</string>
    <string name="modifywallletpwd">修改钱包密码</string>
    <string name="outportKeystore">导出Keystore</string>
    <string name="outportMnemonic">导出助记词</string>
    <string name="deletwallet">删除钱包</string>
    <string name="walletmanage">钱包管理</string>
    <string name="securitycertificate">安全验证</string>
    <string name="deletewallletornot">是否删除当前钱包？</string>
    <string name="pwdnoempty">密码不能为空</string>
    <string name="pleaseinputnewwalletname">请输入新的钱包名称</string>
    <string name="pleaseinputoriginwalletpwd">请输入原钱包密码</string>
    <string name="pleaseinputnewwalletpwd">请输入新的钱包密码</string>
    <string name="pleaseinputnewwalletpwdagin">请再次输入新的钱包密码</string>
    <string name="originpwdnotnull">原密码不能为空</string>
    <string name="newpwdnotnull">新密码不能为空</string>
    <string name="aginpwdnotnull">重复密码不能为空</string>
    <string name="setkeystorepwd">请设置KeyStore密码</string>
    <string name="setkeystorepwdagin">请再次输入确认Keystore密码</string>
    <string name="keystorepwdnotnull">Keystore密码不能为空</string>
    <string name="walletpwdnotnull">钱包密码不能为空</string>
    <string name="keynotthesame">两次密码输入不一致</string>
    <string name="copytosafeplace">请将此文本复制到一个安全的地方</string>
    <string name="copytoclipboard">复制到剪贴板</string>
    <string name="enteraddresslist">进入地址列表</string>
    <string name="copyreceiptaddress">复制收款地址</string>
    <string name="addresslist">地址列表</string>
    <string name="transfernum">交易号</string>
    <string name="transferamount">交易金额</string>
    <string name="receiptamount">接收金额</string>
    <string name="exchangedetail">交易明细</string>
    <string name="allmessageclicktransfercode">完整信息请点击交易号查看</string>
    <string name="suretime">确认时间</string>
    <string name="suretimes">确认次数</string>
    <string name="transfertype">交易类型</string>
    <string name="remark">备注</string>
    <string name="receiptaddress">输入地址</string>
    <string name="exportaddress">输出地址</string>
    <string name="sendamount">发送金额</string>
    <string name="charge">手续费</string>
    <string name="inputpayeeaddress">请输入收款人地址</string>
    <string name="inputbalance">请输入金额（可用：%1$s）</string>
    <string name="inputbalancedefault">请输入金额（可用：）</string>
    <string name="choosecontact">选择联系人</string>
    <string name="choosesidechain">选择侧链</string>
    <string name="transferaddress">转账地址</string>
    <string name="transferdetail">转账详情</string>
    <string name="amount">金额</string>
    <string name="inputPwd">输入密码</string>
    <string name="sure">确定</string>
    <string name="inputyourwallletpwd">请输入您的钱包密码</string>
    <string name="transfersucess">节点发送成功，\n 请耐心等待交易确认</string>
    <string name="inputsidechainrechargeaddress">请输入侧链充值地址</string>
    <string name="rate">汇率</string>
    <string name="rate11">汇率：1:1</string>
    <string name="chargerto">充值到:</string>
    <string name="morecontent_wait">------ 更多内容，敬请期待 ------</string>
    <string name="inputdotname">请输入节点名称(必填)</string>
    <string name="inputdotpublickey">请输入节点公钥(必填)</string>
    <string name="walletkey">请输入钱包公钥</string>
    <string name="pleasechoosearea">请选择国家/地区</string>
    <string name="inputurl">请输入节点官网URL(必填)</string>
    <string name="sureelection">确认参选</string>
    <string name="sureimport">确认导入</string>
    <string name="walletnamenotnull">钱包名称不能为空</string>
    <string name="walletnameruler">钱包名称限定1-16位中、英文，数字</string>
    <string name="keystoreinputwrong">Keystore输入错误</string>
    <string name="mnemonicinputwrong">助记词输入错误</string>
    <string name="modifysucess">修改成功</string>
    <string name="norecorder">暂无消息记录</string>
    <string name="payeeaddrnotnull">收款人地址不能为空</string>
    <string name="transferamountnotnull">转账金额不能为空</string>
    <string name="future_generations">全选</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_text2">超出投票选择上限，是否在已选列表中按排名顺序选择前36名？</string>
    <string name="votingrules">投票规则</string>
    <string name="network_address">请输入网络地址(必填)</string>
    <string name="electoral_affairs">选举管理</string>
    <string name="cancellation">注销</string>
    <string name="countryregion_cannot_be_empty">国家/地区不能为空</string>
    <string name="the_official_website_cannot_be_empty">节点官网URL不能为空</string>
    <string name="no_voting_records">暂无投票记录</string>
    <string name="changes_voting">变更投票</string>
    <string name="registration_deposit">报名押金</string>
    <string name="please_enter_ticket">请输入票数</string>
    <string name="lack_of_balance">余额不足</string>
    <string name="transfertype1001">投票交易</string>
    <string name="transfertype1002">投票交易</string>
    <string name="transfertype1003">投票交易</string>
    <string name="transfertype1004">投票交易</string>
    <string name="transfertype0">创币交易</string>
    <string name="transfertype1">注册资产交易</string>
    <string name="transfertype2">普通转账交易</string>
    <string name="transfertype3">记录交易</string>
    <string name="transfertype4">部署交易</string>
    <string name="transfertype5">侧链挖矿交易</string>
    <string name="transfertype6">侧链充值交易</string>
    <string name="transfertype7">主链提现交易</string>
    <string name="transfertype8">跨链交易</string>
    <string name="transfertype9">注册参选交易</string>
    <string name="transfertype10">取消参选交易</string>
    <string name="transfertype11">更新参选信息交易</string>
    <string name="transfertype12">提取DPoS质押金交易</string>
    <string name="transfertype13">未知交易类型</string>
    <string name="transfertype33">注册CR参选交易</string>
    <string name="transfertype34">取消CR参选交易</string>
    <string name="mustcontain">长度8-16位，且至少包含字母、数字和特殊字符中的2种</string>
    <string name="surecreate">确认创建</string>
    <string name="plzselctoutdate">请选择失效日期</string>
    <string name="tipcanjump">温馨提示：本页内容均非必填，仅保存在本地，供用户授权使用。</string>
    <string name="plzinputname">请输入姓名</string>
    <string name="plzinputnick">请输入昵称</string>
    <string name="plzselcetsex">请选择性别</string>
    <string name="plzselectbirthday">请选择出生日期</string>
    <string name="plzinputheadurl">请输入头像网址（如http://…）</string>
    <string name="plzinputcode">请输入区号</string>
    <string name="plzinputpersonalurl">请输入个人主页网址（如http://…）</string>
    <string name="plzinputgoogle">请输入谷歌账号</string>
    <string name="plzinputmircrosoft">请输入微软账号</string>
    <string name="plzinputfacebook">请输入Facebook账号</string>
    <string name="plzinputtwitter">请输入Twitter账号</string>
    <string name="plzinpurwebo">请输入微博账号</string>
    <string name="plzinputwechat">请输入微信账号</string>
    <string name="plzinputalipay">请输入支付宝账号</string>
    <string name="publish">发布</string>
    <string name="keepasdraft">存为草稿</string>
    <string name="didinfo">DID信息</string>
    <string name="updatepublish">更新发布</string>
    <string name="plzinputnamemust">请输入姓名（必填）</string>
    <string name="refreshctinfo">更新委员信息</string>
    <string name="refreshdidinfo">更新DID信息</string>
    <string name="ctname">委员名称</string>
    <string name="inofficehint">每位CR委员须运行一个默认当选的DPoS超级节点，享有该节点产生的所有收益，并有义务保证节点正常运行。</string>
    <string name="withdrawaldeposit">提取质押金</string>
</resources>