<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/qmuilinearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/found_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#99000000"
        android:layout_margin="15dp"
        android:layout_below="@+id/title_layout"
        android:orientation="vertical">
        
        <org.elastos.wallet.ela.utils.widget.RoundImageView
            android:id="@+id/head_ic"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginTop="70dp"
            app:circle="true"
            android:scaleType="matrix"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ct_manager_icon"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/ctname"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="60dp"
            android:text="@string/inofficehint"/>

    </LinearLayout>

    <TextView
        android:id="@+id/refresh_ct_info"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#2d454e"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/refresh_ct_did"
        android:layout_marginBottom="20dp"
        android:text="@string/refreshctinfo"/>

    <TextView
        android:id="@+id/refresh_ct_did"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#2d454e"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/refreshdidinfo"/>

    <TextView
        android:id="@+id/deposit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#2d454e"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:visibility="gone"
        android:text="@string/withdrawaldeposit"/>

</RelativeLayout>